WIP: capsules/cId/webapp
